--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "start": "electron .",
     "dev": "./dev.sh",
     "dev:simple": "npm run build && electron .",
-    "build": "tsc",
+    "dev:watch": "concurrently \"npm run build:watch\" \"wait-on dist/index.js && electron .\"",
+    "build": "tsc && cp src/*.html dist/ && cp -r src/styles dist/ && cp -r assets dist/",
     "build:watch": "tsc --watch",
     "build:mac": "npm run build && electron-builder --mac",
+    "dist": "npm run build && electron-builder",
+    "dist:mac": "npm run build && electron-builder --mac",
+    "dist:win": "npm run build && electron-builder --win",
+    "dist:linux": "npm run build && electron-builder --linux",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts",
-    "type-check": "tsc --noEmit"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,js,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json}\"",
+    "copy-assets": "cp src/*.html dist/ && cp -r src/styles dist/",
+    "prepare": "husky install"
   },
   "keywords": [
     "electron",
@@ -29,18 +41,28 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "concurrently": "^9.2.0",
     "electron": "^28.0.0",
-    "electron-builder": "^24.6.4",
+    "electron-builder": "^24.13.3",
     "eslint": "^8.54.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "wait-on": "^8.0.4"
   },
   "dependencies": {
     "detect-port": "^2.1.0",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "lucide-react": "^0.536.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "build": {
     "appId": "com.runbar.app",
@@ -60,7 +82,7 @@
     ],
     "mac": {
       "category": "public.app-category.developer-tools",
-      "icon": "assets/icon.icns",
+      "icon": "assets/icon-dock.png",
       "target": "dmg"
     }
   }
