--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,64 @@
+# Dependencies
 node_modules
 
+# Build output
 dist
+
+# macOS
+.DS_Store
+*.dmg
+
+# Backups and temporary files
+backups/
+*.backup
+*.tmp
+*.temp
+
+# Logs
+*.log
+logs/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Electron build artifacts
+out/
+release/
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
